--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,45 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="header__wrap">
+        <a class="logo" href="#">
+          <img class="logo__img" src="images/logo.png" alt="Лопотип сайта">
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="#">Home</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Shop</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Page</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Blog</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="user-nav">
+          <a class="user-nav__link" href="#"></a>
+          <a class="user-nav__link" href="#"></a>
+          <a class="user-nav__link" href="#">
+            <div class="user-nav__num">3</div>
+          </a>
+          <a class="user-nav__link" href="#">
+            <div class="user-nav__num">7</div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </header>
+
 
   <script src="js/main.min.js"></script>
 </body>
