--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__item">
-              <a class="menu__link" href="#">Home</a>
+              <a class="menu__link menu__link--active" href="#">Home</a>
             </li>
             <li class="menu__item">
               <a class="menu__link" href="#">Shop</a>
