create header, fonts

--- a/app/index.html
+++ b/app/index.html
@@ -33,13 +33,19 @@
           </ul>
         </nav>
         <div class="user-nav">
-          <a class="user-nav__link" href="#"></a>
-          <a class="user-nav__link" href="#"></a>
           <a class="user-nav__link" href="#">
-            <div class="user-nav__num">3</div>
+            <img class="user-nav__img" src="images/user-menu/user.svg" alt="Кнопка пользователя">
           </a>
           <a class="user-nav__link" href="#">
-            <div class="user-nav__num">7</div>
+            <img class="user-nav__img" src="images/user-menu/search.svg" alt="Кнопка поиска">
+          </a>
+          <a class="user-nav__link" href="#">
+            <img class="user-nav__img" src="images/user-menu/heart.svg" alt="Кнопка избранного">
+            <span class="user-nav__num">3</span>
+          </a>
+          <a class="user-nav__link" href="#">
+            <img class="user-nav__img" src="images/user-menu/cart.svg" alt="Кнопка корзины">
+            <span class="user-nav__num">7</span>
           </a>
         </div>
       </div>
