--- a/app/index.html
+++ b/app/index.html
@@ -171,9 +171,9 @@
         </p>
         <div class="footer-bottom__accept">
           We accept
-          <img class="footer-bottom__accept-img" src="images/icons/mastercard.png" alt="we accept Mastercard">
-          <img class="footer-bottom__accept-img" src="images/icons/visa.png" alt="we accept Visa">
-          <img class="footer-bottom__accept-img" src="images/icons/paypal.png" alt="we accept PayPal">
+          <img class="footer-bottom__accept-img" src="images/icons/mastercard.png" alt="We accept Mastercard">
+          <img class="footer-bottom__accept-img" src="images/icons/visa.png" alt="We accept Visa">
+          <img class="footer-bottom__accept-img" src="images/icons/paypal.png" alt="We accept PayPal">
         </div>
       </div>
     </div>
